examples/good/8-list-head-tail.afl
main::[Int];

Let main = (((1):[]));