examples/bad/2-one-plus-false.afl
main::Int;

Let main = ((1)+(False));